# ksoft-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ksoft/: __init__.py  cli.py  config.yaml  main.py
ksoft/api/: main.py  models.py  routes.py
ksoft/commands/: __init__.py  add.py  init.py  list.py  run.py  start_api.py
ksoft/core/: bootstrap.py  database.py  module_manager.py
scripts/: setup-dev.sh
tests/: conftest.py  test_api_routes.py  test_bootstrap.py  test_cli.py  test_module_manager.py
